aws_projects/modules/vpc/monitorSecurityGroup.tf
############################################
#     MONITORING SECURITY GROUP            #
############################################

resource "aws_security_group" "monitor_sg" {
    name = "monitor_sg"
    description = "Allow traffic to an from instances"
    vpc_id = "${aws_vpc.main.id}"
    
        ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 9100
        to_port = 9100
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 3000
        to_port = 3000
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 9090
        to_port = 9090
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = -1
        to_port = -1
        protocol = "icmp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port=0
        to_port=0
        protocol="-1"
        cidr_blocks=["0.0.0.0/0"]
    }

    tags ={
        Name = "MonitoringSecGroup"
    }
}

output "monitor_sg_id" {
  value = "${aws_security_group.monitor_sg.id}"
}
